tests/snapshots/cli__cli_help_output.snap
---
source: tests/cli.rs
expression: output
---
A CLI tool that can peek into `*.npy` files.

Usage: num-peek <FILE_PATH>

Arguments:
  <FILE_PATH>  Path to the *.npy file

Options:
  -h, --help     Print help
  -V, --version  Print version
