tests/snapshots/cli__cli_run_int.snap
---
source: tests/cli.rs
expression: output
---
Peek into assets/demo.npy
----------------------------------------
Dimensions: 2
Shape: [2, 3]
Type: Int8
----------------------------------------
Number of unique values: 6
Unique values: [1, 3, 4, 8, 12, 22]
Min value: 1
Max value: 22
