tests/snapshots/cli__float64_snapshot.snap
---
source: tests/cli.rs
expression: output
---
Peek into assets/float64.npy
----------------------------------------
Dimensions: 2
Shape: [2, 3]
Type: Float8
Bytes: 176 B
----------------------------------------
Number of values: 6
Number of unique values: 6
Unique values: [1.1, 3.3, 4.2, 8.4, 12.6, 22.5]
Min value: 1.1
Max value: 22.5
