tests/snapshots/cli__int16_snapshot.snap
---
source: tests/cli.rs
expression: output
---
Peek into assets/int16.npy
----------------------------------------
Dimensions: 2
Shape: [2, 3]
Type: Int16
Bytes: 140 B
----------------------------------------
Number of values: 6
Number of unique values: 6
Unique values: [1, 3, 4, 8, 12, 22]
Min value: 1
Max value: 22
