tests/snapshots/cli__string_snapshot.snap
---
source: tests/cli.rs
expression: output
---
Peek into assets/string.npy
----------------------------------------
Dimensions: 2
Shape: [2, 3]
Type: ByteStr40
Bytes: 158 B
----------------------------------------
Number of values: 6
Number of unique values: 4
Unique values: ["cat", "dog", "horse", "mouse"]
